Bug 261571 - krdc crash when I quickly scrolled down with mouse wheel.
Summary: krdc crash when I quickly scrolled down with mouse wheel.
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: VNC (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
: 262105 263411 263811 268713 271357 273850 278261 278706 278880 280595 282310 285020 286077 287840 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-29 21:54 UTC by jamundso
Modified: 2011-12-03 09:33 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.36 KB, text/plain)
2011-08-08 12:19 UTC, Denis
Details
New crash information added by DrKonqi (3.75 KB, text/plain)
2011-11-09 16:31 UTC, Mathsterk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jamundso 2010-12-29 21:54:33 UTC
Application: krdc (4.5.4 (KDE 4.5.4))
KDE Platform Version: 4.5.4 (KDE 4.5.4) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.34.7-66.fc13.i686 i686
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
- What I was doing when the application crashed:
krdc crash when I quickly scrolled down with mouse wheel. I was using konsole in a VNC session.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KRDC (krdc), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7738780 (LWP 14896))]

Thread 2 (Thread 0xb34ffb70 (LWP 26103)):
[KCrash Handler]
#7  0x05504254 in VncClientThread::run (this=0x9257704) at /usr/src/debug/kdenetwork-4.5.4/krdc/vnc/vncclientthread.cpp:396
#8  0x06e3974f in QThreadPrivate::start (arg=0x9257704) at thread/qthread_unix.cpp:248
#9  0x007e1919 in start_thread (arg=0xb34ffb70) at pthread_create.c:301
#10 0x00723d4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:133

Thread 1 (Thread 0xb7738780 (LWP 14896)):
#0  0x00a3a416 in __kernel_vsyscall ()
#1  0x00718f56 in __poll (fds=0xbfb150c8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0x009aa0c0 in _xcb_conn_wait (c=<value optimized out>, cond=<value optimized out>, vector=<value optimized out>, count=<value optimized out>) at xcb_conn.c:306
#3  0x009aa62b in _xcb_out_send (c=<value optimized out>, vector=<value optimized out>, count=<value optimized out>) at xcb_out.c:338
#4  0x009aa9c8 in xcb_writev (c=<value optimized out>, vector=0xbfb151c8, count=3, requests=<value optimized out>) at xcb_out.c:286
#5  0x008a6dcc in _XSend (dpy=0x8bbfd08, data=0x0, size=0) at xcb_io.c:339
#6  0x008a6f70 in _XReply (dpy=0x8bbfd08, rep=0xbfb15260, extra=0, discard=1) at xcb_io.c:457
#7  0x0089c002 in XTranslateCoordinates (dpy=0x8bbfd08, src_win=267, dest_win=100713251, src_x=744, src_y=862, dst_x=0xbfb152dc, dst_y=0xbfb152d8, child=0xbfb152d4) at TrCoords.c:53
#8  0x07675786 in QWidget::mapFromGlobal (this=0x92576d0, pos=...) at kernel/qwidget_x11.cpp:1324
#9  0x075dfe2a in QApplication::notify (this=0xbfb1600c, receiver=0x92576d0, e=0xbfb15750) at kernel/qapplication.cpp:3891
#10 0x021d7a1b in KApplication::notify (this=0xbfb1600c, receiver=0x92576d0, event=0xbfb15750) at /usr/src/debug/kdelibs-4.5.4/kdeui/kernel/kapplication.cpp:310
#11 0x06f2b133 in QCoreApplication::notifyInternal (this=0xbfb1600c, receiver=0x92576d0, event=0xbfb15750) at kernel/qcoreapplication.cpp:726
#12 0x075deae8 in sendEvent (receiver=0x92576d0, event=0xbfb15750, alienWidget=0x0, nativeWidget=0x92576d0, buttonDown=0x7ee1318, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:215
#13 QApplicationPrivate::sendMouseEvent (receiver=0x92576d0, event=0xbfb15750, alienWidget=0x0, nativeWidget=0x92576d0, buttonDown=0x7ee1318, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2971
#14 0x0765c2f0 in QETWidget::translateMouseEvent (this=0x92576d0, event=0xbfb15c6c) at kernel/qapplication_x11.cpp:4380
#15 0x0765b743 in QApplication::x11ProcessEvent (this=0xbfb1600c, event=0xbfb15c6c) at kernel/qapplication_x11.cpp:3391
#16 0x0768774a in x11EventSourceDispatch (s=0x8bbe7e8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#17 0x00af2525 in g_main_dispatch (context=0x8bbd110) at gmain.c:1960
#18 IA__g_main_context_dispatch (context=0x8bbd110) at gmain.c:2513
#19 0x00af6268 in g_main_context_iterate (context=0x7e4490, block=1, dispatch=1, self=0x8bbb818) at gmain.c:2591
#20 0x00af6449 in IA__g_main_context_iteration (context=0x8bbd110, may_block=1) at gmain.c:2654
#21 0x06f53446 in QEventDispatcherGlib::processEvents (this=0x8ba6788, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#22 0x07687336 in QGuiEventDispatcherGlib::processEvents (this=0x8ba6788, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#23 0x06f2980a in QEventLoop::processEvents (this=0xbfb15f64, flags=...) at kernel/qeventloop.cpp:149
#24 0x06f29b4a in QEventLoop::exec (this=0xbfb15f64, flags=...) at kernel/qeventloop.cpp:201
#25 0x06f2d807 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#26 0x075d8828 in QApplication::exec () at kernel/qapplication.cpp:3585
#27 0x0806e0e4 in main (argc=) at /usr/src/debug/kdenetwork-4.5.4/krdc/main.cpp:104

Possible duplicates by query: bug 257071, bug 248566, bug 248518, bug 245338, bug 243426.

Reported using DrKonqi
Comment 1 Urs Wolfer 2011-01-30 10:21:28 UTC
*** Bug 263411 has been marked as a duplicate of this bug. ***
Comment 2 Urs Wolfer 2011-01-30 10:22:05 UTC
*** Bug 263811 has been marked as a duplicate of this bug. ***
Comment 3 Urs Wolfer 2011-01-30 10:28:05 UTC
*** Bug 262105 has been marked as a duplicate of this bug. ***
Comment 4 Urs Wolfer 2011-04-10 20:41:54 UTC
*** Bug 268713 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2011-08-03 23:29:15 UTC
*** Bug 271357 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-08-03 23:29:37 UTC
*** Bug 273850 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2011-08-03 23:30:01 UTC
*** Bug 278261 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-08-03 23:30:33 UTC
*** Bug 278706 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2011-08-03 23:31:13 UTC
*** Bug 278880 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2011-08-03 23:44:56 UTC
SVN commit 1244721 by cfeck:

Keep eventQueue locked while dequeuing events

Urs, please post-review :)
CCBUG: 261571


 M  +3 -1      vncclientthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1244721
Comment 11 Denis 2011-08-08 12:19:01 UTC
Created attachment 62659 [details]
New crash information added by DrKonqi

krdc (4.7.00 (4.7.0)) on KDE Platform 4.7.00 (4.7.0) using Qt 4.7.2

- What I was doing when the application crashed:
Just doing regular operations at remote host.

-- Backtrace (Reduced):
#7  0x00007fa39119469d in VncClientThread::run (this=0x1867660) at ../../../krdc/vnc/vncclientthread.cpp:397
#8  0x00007fa39fd2d175 in QThreadPrivate::start (arg=0x1867660) at thread/qthread_unix.cpp:320
#9  0x00007fa39c844d8c in start_thread (arg=0x7fa38e3fb700) at pthread_create.c:304
#10 0x00007fa39f70504d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
[...]
Comment 12 Christoph Feck 2011-08-25 12:48:10 UTC
*** Bug 280595 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2011-09-19 01:13:02 UTC
*** Bug 282310 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2011-10-26 20:24:23 UTC
*** Bug 285020 has been marked as a duplicate of this bug. ***
Comment 15 Christoph Feck 2011-11-08 08:05:09 UTC
*** Bug 286077 has been marked as a duplicate of this bug. ***
Comment 16 Christoph Feck 2011-11-08 08:07:55 UTC
SVN commit 1263115 by cfeck:

Keep eventQueue locked while dequeuing events (backport r1244721)

BUG: 261571
FIXED-IN: 4.7.4



 M  +3 -1      vncclientthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1263115
Comment 17 Mathsterk 2011-11-09 16:31:00 UTC
Created attachment 65444 [details]
New crash information added by DrKonqi

krdc (4.7.2 (4.7.2)) on KDE Platform 4.7.2 (4.7.2) using Qt 4.7.4

- What I was doing when the application crashed:

Scrolling down and moving the mouse, then KRDC crashed.

-- Backtrace (Reduced):
#7  0x0440c562 in VncClientThread::run (this=0x8e02dcc) at ../../../krdc/vnc/vncclientthread.cpp:397
#8  0x009a07b3 in QThreadPrivate::start (arg=0x8e02dcc) at thread/qthread_unix.cpp:331
[...]
Comment 18 Myriam Schweingruber 2011-12-03 09:33:55 UTC
*** Bug 287840 has been marked as a duplicate of this bug. ***