Keep eventQueue locked while dequeuing events (backport r1244721)

BUG: 261571
FIXED-IN: 4.7.4


svn path=/branches/KDE/4.7/kdenetwork/krdc/; revision=1263115